--- a/_config.yml
+++ b/_config.yml
@@ -27,16 +27,16 @@ disqus_shortname: myshortname
 color:
   primary: 283845 #1481ba light blue
   primary-alt: B5BEC6 #034748 dark green #3A506B puple blue
-  primary-rgb: "9,9,8"
+  primary-rgb: "40,56,69"
   secondary: 090908
   secondary-dark: 2b2b2b
 
 # Footer settings
 footer:
   copyright: Ombarus
-  location: Japan
-  social: Around the Web
-  credits: Credits
+  location: Author
+  social: Social
+  credits: Copyright
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -55,7 +55,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Contact me by email.
+  - line: Guillaume Bouvier
 
 # Credits content
 credits: 'All content therein is owned by their respective creator. Please ask before you copy, distribute or reproduce anything you find on this website.'
